--- a/src/styling.css
+++ b/src/styling.css
@@ -12,6 +12,7 @@
   border: 3px solid green;
   border-radius: 10px;
   padding: 10px;
+  background-color: lightgoldenrodyellow;
 }
 
 .submit-btn {
